<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/default_horizontal_margin"
    android:layout_marginVertical="@dimen/default_vertical_margin"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".horizontalrecyclerview.HorizontalRecyclerViewFragment">

        <TextView
            android:id="@+id/tv_rv_horizontal_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rv_horizontal_explain"
            app:layout_constraintBottom_toTopOf="@+id/rv_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_horizontal_explain" />

        <TextView
            android:id="@+id/tv_rv_horizontal_reverse_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/rv_horizontal_reverse_explain"
            app:layout_constraintBottom_toTopOf="@+id/rv_horizontal_reverse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal_reverse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@+id/tv_rv_horizontal_endless_right_direction_explain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_horizontal_reverse_explain" />

        <TextView
            android:id="@+id/tv_rv_horizontal_endless_right_direction_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/rv_horizontal_endless_direction_right_explain"
            app:layout_constraintBottom_toTopOf="@+id/rv_horizontal_endless_right_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal_reverse" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal_endless_right_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_horizontal_endless_right_direction_explain" />

        <TextView
            android:id="@+id/tv_rv_horizontal_endless_left_direction_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/rv_horizontal_endless_direction_left_explain"
            app:layout_constraintBottom_toTopOf="@+id/rv_horizontal_endless_left_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal_endless_right_direction" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal_endless_left_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@+id/tv_rv_horizontal_endless_circular_explain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_horizontal_endless_left_direction_explain" />

        <TextView
            android:id="@+id/tv_rv_horizontal_endless_circular_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/rv_horizontal_endless_circular_explain"
            app:layout_constraintBottom_toTopOf="@+id/rv_horizontal_endless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal_endless_left_direction" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal_endless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_horizontal_endless_circular_explain" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>